# mlops_hw_1

./: .gitignore  README.md  pyproject.toml
app/: deployment_mlflow.py  main.py
app/data/: amz_total_data_limited.csv  load_data.py
app/model/: embeddings.py  optuna_tuning.py  train.py  train_model.py
app/preprocessing/: feature_engineering.py  prepare_data.py
app/utils/: utils.py  wrapper.py
mlartifacts/638770400475416238/3dcd9ae99e30418c974d641a99c72f18/artifacts/: similarity_table.json
mlruns/638770400475416238/16495f23b54b482ba3a8898573793e87/metrics/: avg_similarity
mlruns/638770400475416238/16495f23b54b482ba3a8898573793e87/params/: min_alpha
mlruns/638770400475416238/16495f23b54b482ba3a8898573793e87/tags/: author
mlruns/638770400475416238/22cd25e0e43947349b594ee437472477/metrics/: avg_similarity
mlruns/638770400475416238/22cd25e0e43947349b594ee437472477/tags/: mlflow.note.content  mlflow.runName  notes
mlruns/638770400475416238/2cfe7e57bc934d9abb66ea76cc810dd9/metrics/: avg_similarity
mlruns/638770400475416238/2cfe7e57bc934d9abb66ea76cc810dd9/params/: alpha  min_alpha
mlruns/638770400475416238/2cfe7e57bc934d9abb66ea76cc810dd9/tags/: mlflow.note.content  mlflow.source.git.commit
mlruns/638770400475416238/518f5264f2394d4eb1ee747fc2859f85/metrics/: avg
mlruns/638770400475416238/523248d7f355429aad6d2c8a4e242f24/metrics/: avg_similarity
mlruns/638770400475416238/523248d7f355429aad6d2c8a4e242f24/tags/: model_type
mlruns/638770400475416238/72c48930b16b43c0b6d83585c04e8389/metrics/: best_value
(+39 files in other folders)
